<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/rootSettings"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="?attr/colorSurface"

    android:clipToPadding="false">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        android:padding="22dp">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/settings"

            android:textColor="?attr/colorOnSurface"

            android:textSize="34sp"

            android:textStyle="bold"/>


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/appearance"

            android:textColor="?attr/colorPrimary"

            android:textSize="17sp"

            android:textStyle="bold"

            android:layout_marginTop="35dp"/>


        <com.google.android.material.card.MaterialCardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="15dp"

            app:cardCornerRadius="28dp"

            app:cardElevation="0dp"

            app:cardBackgroundColor="?attr/colorSurfaceContainerHigh">


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"

                android:padding="20dp">


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/language"

                    android:textColor="?attr/colorOnSurface"

                    android:textSize="17sp"

                    android:textStyle="bold"/>


                <Spinner

                    android:id="@+id/spinnerLanguage"

                    android:layout_width="match_parent"
                    android:layout_height="55dp"

                    android:layout_marginTop="10dp"/>


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/theme"

                    android:textColor="?attr/colorOnSurface"

                    android:textSize="17sp"

                    android:textStyle="bold"

                    android:layout_marginTop="28dp"/>


                <Spinner

                    android:id="@+id/spinnerTheme"

                    android:layout_width="match_parent"
                    android:layout_height="55dp"

                    android:layout_marginTop="10dp"/>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>